# GenericBot

./: .gitignore  .replit  GenericBot.py  LICENSE  README.md  RockyBot.py  auth.pckl  blackjackstats.txt  features.py  keep_alive.py  license  posts.txt  pyproject.toml  shitpost.txt  time.txt  truth.txt
assets/: truth.txt
