[tool.poetry]
name = "rockybot"
version = "1.4.0"
description = ""
authors = ["awesomeplaya211 <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
"discord.py" = "^1.7.3"
wikipedia = "^1.4.0"
asyncpraw = "^7.4.0"
python-dotenv = "^0.19.1"
pyowm = "^3.2.0"
vexpy = "^0.1.1"
matplotlib = "^3.4.3"
randfacts = "^0.14.0"
discord-py-slash-command = "^3.0.1"
Flask = "^2.0.2"
discord-pretty-help = "^1.3.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
